--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
